@@ -1,3 +1,7 @@
+2015-06-23  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* run gnulib --add-import
+
 2015-06-20  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* pretest 5.9.95, 5.9.96
